@@ -158,16 +158,9 @@ struct ecl_interrupt_struct {
 #define __attribute__(x)
 #endif
 #if defined(ECL_THREADS)
-# ifdef WITH___THREAD
-#  define cl_env (*cl_env_p)
-#  define ecl_process_env() cl_env_p
-#  define ecl_process_env_unsafe() cl_env_p
-   extern __thread cl_env_ptr cl_env_p;
-# else
-#  define cl_env (*ecl_process_env())
-   extern ECL_API cl_env_ptr ecl_process_env(void) __attribute__((const));
-   extern ECL_API cl_env_ptr ecl_process_env_unsafe(void) __attribute__((const));
-# endif
+# define cl_env (*ecl_process_env())
+  extern ECL_API cl_env_ptr ecl_process_env(void) __attribute__((const));
+  extern ECL_API cl_env_ptr ecl_process_env_unsafe(void) __attribute__((const));
 #else
 # define cl_env (*cl_env_p)
 # define ecl_process_env() cl_env_p
@@ -1927,10 +1920,8 @@ extern ECL_API cl_object si_coerce_to_base_string(cl_object x);
 extern ECL_API cl_object si_coerce_to_extended_string(cl_object x);
 #define ecl_alloc_simple_extended_string(l) ecl_alloc_simple_vector((l),ecl_aet_ch)
 extern ECL_API cl_object ecl_alloc_adjustable_extended_string(cl_index l);
-# ifdef ECL_UNICODE_NAMES
 extern ECL_API cl_object _ecl_ucd_code_to_name(ecl_character c);
 extern ECL_API cl_object _ecl_ucd_name_to_code(cl_object name);
-# endif
 #else
 #define si_base_char_p cl_characterp
 #define si_base_string_p cl_stringp
