@@ -29,6 +29,7 @@
 
 * Pending changes since 16.1.3
 ** Enhancements
+- unicode names are always linked for unicode builds (~--with-unicode-names~ removed)
 - numerous bytecodes compiler enhancements
 - ~ext:run-program~: process streams may be virtual streams (for instance
   ~*standard-output*~ in slime, or a string-output-stream)
@@ -67,6 +68,9 @@
 - buildsystem parallel builds work (i.e make -j999)
 - ECL builds on consoles with unusual encodings on Windows (i.e cp936)
 ** API changes
+- no-op ~--enable-asmapply~ configure option has been removed
+- ~profile~ and ~rt~ contribs are now deprecated and disabled by default
+- thread-local variable support has been removed (~--with___thread~)
 - deprecated configure option ~--enable-opcode8~ has been removed
 - mk-defsystem is not build by default (enable by ~--with-defsystem=yes~)
 - asdf:make-build accepts ~:init-name~ argument for libraries
